--- a/package.json
+++ b/package.json
@@ -26,7 +26,13 @@
     "homepage": "https://github.com/lismore/covert-comms-desktop#readme",
     "devDependencies": {
         "electron-packager": "^5.0.1",
-        "electron-prebuilt": "^0.30.3"
+        "electron": "3.0.10",
+        "cryptiles": ">=4.1.2",
+        "lodash": ">=4.17.5",
+        "minimatch": ">=3.0.2",
+        "hawk": ">=3.1.3",
+        "hoek": ">=4.2.1",
+        "request": ">=2.68.0"
     },
     "dependencies": {
         "nconf": "^0.7.2",
